Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30197

Missing DBUG_RETURN or DBUG_VOID_RETURN macro in function "Wsrep_schema::restore_view()"

    XMLWordPrintable

Details

    Description

      perl ./mtr galera.basic --mem --mysqld=--character-set-server=utf32
      

      10.4 a4914008

      /mnt8t/bld/10.4-nightly/bin/mysqld: debugger aborting because missing DBUG_RETURN or DBUG_VOID_RETURN macro in function "Wsrep_schema::restore_view()"
       
      221211 16:19:19 [ERROR] mysqld got signal 6 ;
      This could be because you hit a bug. It is also possible that this binary
      or one of the libraries it was linked against is corrupt, improperly built,
      or misconfigured. This error can also be caused by malfunctioning hardware.
       
      To report this bug, see https://mariadb.com/kb/en/reporting-bugs
       
      We will try our best to scrape up some info that will hopefully help
      diagnose the problem, but since we have already crashed, 
      something is definitely wrong and this may fail.
       
      Server version: 10.4.28-MariaDB-debug-log
      key_buffer_size=1048576
      read_buffer_size=131072
      max_used_connections=1
      max_threads=153
      thread_count=8
      It is possible that mysqld could use up to 
      key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 63657 K  bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.
       
      Thread pointer: 0x62b00001c208
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = 0x7f175cb22850 thread_stack 0x5fc00
      sanitizer_common/sanitizer_common_interceptors.inc:4101(__interceptor_backtrace.part.0)[0x7f1768504df1]
      mysys/stacktrace.c:174(my_print_stacktrace)[0x55d52ddeff93]
      sql/signal_handler.cc:232(handle_fatal_signal)[0x55d52ca2ab90]
      sigaction.c:0(__restore_rt)[0x7f1767fa3140]
      linux/raise.c:51(__GI_raise)[0x7f1767ac0ce1]
      stdlib/abort.c:81(__GI_abort)[0x7f1767aaa537]
      dbug/dbug.c:2068(DbugMalloc)[0x55d52de530cc]
      dbug/dbug.c:1210(_db_return_)[0x55d52de4f0dd]
      sql/wsrep_schema.cc:821(Wsrep_schema::restore_view(THD*, wsrep::id const&) const)[0x55d52d3531ce]
      sql/wsrep_server_service.cc:216(Wsrep_server_service::log_view(wsrep::high_priority_service*, wsrep::view const&))[0x55d52d3655cb]
      src/server_state.cpp:1046(wsrep::server_state::on_view(wsrep::view const&, wsrep::high_priority_service*))[0x55d52df7208b]
      src/wsrep_provider_v26.cpp:405((anonymous namespace)::view_cb(void*, void*, wsrep_view_info const*, char const*, unsigned long))[0x55d52dfaaf68]
      2022-12-11 16:19:19 0 [Note] WSREP: Member 1.0 (tomahawk-d11) requested state transfer from '*any*'. Selected 0.0 (tomahawk-d11)(SYNCED) as donor.
      2022-12-11 16:19:19 0 [Note] WSREP: Shifting SYNCED -> DONOR/DESYNCED (TO: 2)
      src/replicator_smm.cpp:2438(galera::ReplicatorSMM::submit_view_info(void*, wsrep_view_info const*))[0x7f175f719b49]
      src/replicator_smm.cpp:2832(galera::ReplicatorSMM::submit_ordered_view_info(void*, wsrep_view_info const*))[0x7f175f719b89]
      src/replicator_smm.cpp:3018(galera::ReplicatorSMM::process_prim_conf_change(void*, gcs_act_cchange const&, int, void*))[0x7f175f727645]
      src/galera_gcs.hpp:186(galera::Gcs::resume_recv())[0x7f175f7278e1]
      bits/stl_vector.h:680(std::vector<gcs_act_cchange::member, std::allocator<gcs_act_cchange::member> >::~vector())[0x7f175f751fcb]
      src/gcs_action_source.cpp:29(Release::~Release())[0x7f175f752402]
      src/replicator_smm.cpp:402(galera::ReplicatorSMM::async_recv(void*))[0x7f175f725f28]
      src/wsrep_provider.cpp:290(galera_recv)[0x7f175f7006ed]
      src/wsrep_provider_v26.cpp:858(wsrep::wsrep_provider_v26::run_applier(wsrep::high_priority_service*))[0x55d52dfaf026]
      sql/wsrep_thd.cc:57(wsrep_replication_process(THD*, void*))[0x55d52d344169]
      sql/wsrep_mysqld.cc:2996(start_wsrep_THD(void*))[0x55d52d3244ad]
      perfschema/pfs.cc:1871(pfs_spawn_thread)[0x55d52d2cc11d]
      nptl/pthread_create.c:478(start_thread)[0x7f1767f97ea7]
      x86_64/clone.S:97(__GI___clone)[0x7f1767b84aef]
       
      Trying to get some variables.
      Some pointers may be invalid and cause the dump to abort.
      Query (0x0): (null)
      Connection ID (thread ID): 2
      Status: NOT_KILLED
      

      Attachments

        Activity

          People

            sysprg Julius Goryavsky (Inactive)
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 3h 20m
                3h 20m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.